fix(core-css): wrap error text

--- a/core/css/src/component/error.css
+++ b/core/css/src/component/error.css
@@ -2,6 +2,5 @@
   [data-component="error"] {
     display: block;
     font-size: var(--wui-font-size-2);
-    white-space: nowrap;
   }
 }
